--- a/kokua-web/comments.html
+++ b/kokua-web/comments.html
@@ -24,7 +24,7 @@
   <center><li><a class="active" href="#KOKUA">KOKUA</a></li>
   <br><br><li><a href="home.html">home</a></li><br><br>
   <li><a href="coldcaller.html">code caller</a></li><br><br>
-  <li><a href="groupgnerator.html">group generator</a></li><br><br>
+  <li><a href="groupgenerator.html">group generator</a></li><br><br>
   <li><a href="comments.html">comments</a></li><br><br>
   <li><a href="aboutus.html">about us</a></li><br><br></center>
 </nav>
