--- a/Cold_Caller.html
+++ b/Cold_Caller.html
@@ -1,28 +1,27 @@
 <html>
 	<head>
-		<title> 						<!--tab name-->
+		<title> 						
 		Cold Caller
-		</title>
+		</title> 						<!--tab name-->
 		
 		<script src="pick.js" type="text/javascript"></script> 			  <!--embeds the Js file-->
 	
 	</head>
 	<body>
 		<h1>Cold Caller</h1>                <!--head-->
-		<button id="caller" onclick="pick()">Choose here!</button> 	<!--randomly picks from array names-->
-		<div id="call"></div>  <!--location and style of choosen name-->
+		<div id="loaded_data"></div>  <!--location and style of lists-->
 		
 		<p>
 			<form id="form1">
-				Type your student's name: <input type="text" name = "user's name"/> <!--receives input-->
+				Type your student's name: <input type="text" name = "user's name"/>                  <!--receives input-->
 			</form>
-				<button onclick="save_data()">Submit</button> <!--submit data-->
+				<button onclick="save_data()">Submit</button>            <!--submit data-->
 		</p>
 		<p>
-		<button onclick="load_data()">Cold Call</button>
+		<button onclick="pick()">Cold Call</button>           <!--cold call picks a random name-->
 		</p>
-		<p id="loaded_data">
-		</p>
+		<p id="call">
+		</p>           <!--displays cold called name-->
 		
 		<!-- entry boxes
 		<form>
