--- a/kokua-web/home.html
+++ b/kokua-web/home.html
@@ -61,13 +61,13 @@ li a {
 }
 
 li a.active {
-    background-color: #35B0E0;
+    background-color: #53cbed;
     color: white;
 }
 
 li a:hover:not(.active) {
     background-color: white;
-    color: #35B0E0;
+    color: #53cbed;
 }
 </style>
 
