--- a/kokua-web/aboutus.html
+++ b/kokua-web/aboutus.html
@@ -28,7 +28,135 @@
   <li><a href="comments.html">comments</a></li><br><br>
   <li><a href="aboutus.html">about us</a></li><br><br></center>
 </nav>
-		<h6>About Us</h6>
+<h6>About Us</h6>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing:border-box}
+body {font-family: Verdana,sans-serif;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 13px;
+  width: 13px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+</style>
+<body>
+
+
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="img_nature_wide.jpg" style="width:100%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 3</div>
+  <img src="img_fjords_wide.jpg" style="width:100%">
+  <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 3</div>
+  <img src="img_mountains_wide.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+
+<script>
+var slideIndex = 0;
+showSlides();
+
+function showSlides() {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    for (i = 0; i < slides.length; i++) {
+       slides[i].style.display = "none";
+    }
+    slideIndex++;
+    if (slideIndex> slides.length) {slideIndex = 1}
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";
+    dots[slideIndex-1].className += " active";
+    setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+</script>
+
+</body>
+
+		
 		<p> Our names are Christina, Zoe, Cindy, Jessica and Anna, we are from the Girls Who Code Summer Immersion Program 2016</p>
 </ul>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -60,15 +188,113 @@ li a {
 }
 
 li a.active {
-    background-color: #35B0E0;
+    background-color: #53cbed;
     color: white;
 }
 
 li a:hover:not(.active) {
     background-color: white;
-    color: #35B0E0;
+    color: #53cbed;
 }
 </style>
 
 	</body>
+	
+	<head>
+<style>
+head {
+    
+    transition: background-color 20s;
+}
+
+button.accordion {
+    background-color: #898989;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: background-color .5s;
+}
+
+button.accordion.active, button.accordion:hover {
+    background-color: #606060;
+}
+
+button.accordion:after {
+    content: '\02795';
+    font-size: 13px;
+    color: white;
+    float: right;
+    margin-left: 5px;
+}
+
+button.accordion.active:after {
+    content: "\2796";
+}
+
+div.panel {
+    padding: 0 18px;
+    
+    max-height: 0;
+    overflow: hidden;
+    transition:  background-color .3s;
+	
+    opacity: 25%;
+}
+
+div.panel.show {
+    opacity: 20;
+    max-height: 500px;
+}
+</style>
+</head>
+</h5>
+<body>
+
+
+<button class="accordion">Christina</button>
+<div class="panel">
+  <p>Christina</p>
+</div>
+
+<button class="accordion">Jessica</button>
+<div class="panel">
+  <p>Jessica</p>
+</div>
+
+<button class="accordion">Zoe</button>
+<div id="foo" class="panel">
+  <p>Zoe</p>
+</div>
+
+<button class="accordion">Cindy</button>
+<div id="foo" class="panel">
+  <p>Cindy</p>
+</div>
+
+<button class="accordion">Anna</button>
+<div id="foo" class="panel">
+  <p>Anna</p>
+</div>
+
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function(){
+        this.classList.toggle("active");
+        this.nextElementSibling.classList.toggle("show");
+  }
+}
+</script>
+
+</body>
+	
+	
 </html>
