--- a/kokua-web/coldcaller.html
+++ b/kokua-web/coldcaller.html
@@ -59,13 +59,13 @@ li a {
 }
 
 li a.active {
-    background-color: #35B0E0;
+    background-color: #53cbed;
     color: white;
 }
 
 li a:hover:not(.active) {
     background-color: white;
-    color: #35B0E0;
+    color: #53cbed;
 }
 </style>
 		<center><script>
@@ -100,8 +100,8 @@ li a:hover:not(.active) {
 }
 .button:hover {
     background-color:white;
-    color: #35B0E0;
-	border: 2px solid #35B0E0;
+    color: #53cbed;
+	border: 2px solid #53cbed;
 
 }
 .button:hover {
@@ -139,4 +139,38 @@ input[type=text] {
 				</p>
 			
 		</body></center>
-</html>
+
+
+	<head><center>
+		
+		<script src="pick.js" type="text/javascript"></script> <!--embeds the Js file-->
+	</head>
+	<body>
+		<h1>
+		Cold Caller
+		</h1> <!--head-->
+		<div id="loaded_data"></div> <!--location and style of lists-->
+		
+		<p>
+			<form id="form1">
+				Type your student's name: <input type="text" name = "user's name"/>                  <!--receives input-->
+			</form>
+				<button class "button" onclick="add_names()">Submit</button>            <!--submit data-->
+		</p>
+		<p>
+		<button class "button" onclick="pick()">Cold Call</button>           <!--cold call picks a random name-->
+		</p>
+		<p id="call">
+		</p>           <!--displays cold called name-->
+		
+		<!-- entry boxes
+		<form>
+		First name:<br>
+		<input type="text" name="firstname"><br>
+		Last name:<br>
+		<input type="text" name="lastname">
+		</form>
+		-->
+	</center></body>
+	
+	</html>
