--- a/kokua-web/aboutus.html
+++ b/kokua-web/aboutus.html
@@ -208,7 +208,7 @@ head {
 }
 
 button.accordion {
-    background-color: #898989;
+    background-color: #CECECE;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -221,7 +221,7 @@ button.accordion {
 }
 
 button.accordion.active, button.accordion:hover {
-    background-color: #606060;
+    background-color: #ADADAD;
 }
 
 button.accordion:after {
