--- a/kokua-web/coldcaller.html
+++ b/kokua-web/coldcaller.html
@@ -146,19 +146,18 @@ input[type=text] {
 		<script src="pick.js" type="text/javascript"></script> <!--embeds the Js file-->
 	</head>
 	<body>
-		<h1>
-		Cold Caller
-		</h1> <!--head-->
+		
 		<div id="loaded_data"></div> <!--location and style of lists-->
 		
 		<p>
 			<form id="form1">
-				Type your student's name: <input type="text" name = "user's name"/>                  <!--receives input-->
+				<p>Type your student's name:</p>
+				<input type="text" name = "user's name"/>                  <!--receives input-->
 			</form>
-				<button class "button" onclick="add_names()">Submit</button>            <!--submit data-->
+				<button class= "button" onclick="add_names()">Submit</button>            <!--submit data-->
 		</p>
 		<p>
-		<button class "button" onclick="pick()">Cold Call</button>           <!--cold call picks a random name-->
+		<button class ="button" onclick="pick()">Cold Call</button>           <!--cold call picks a random name-->
 		</p>
 		<p id="call">
 		</p>           <!--displays cold called name-->
