MOREEEE NEW AHHHH

--- a/kokua-web/aboutus.html
+++ b/kokua-web/aboutus.html
@@ -208,8 +208,8 @@ head {
 }
 
 button.accordion {
-    background-color: #CECECE;
-    color: white;
+    background-color: white;
+    color: black;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -221,7 +221,7 @@ button.accordion {
 }
 
 button.accordion.active, button.accordion:hover {
-    background-color: #ADADAD;
+    background-color: D1D1D1;
 }
 
 button.accordion:after {
