--- a/coldcallerpage.html
+++ b/coldcallerpage.html
@@ -16,18 +16,22 @@
 		<p>
 			<form id="form1">
 				Type your student's name: <input type="text" name = "user's name"/>                  <!--receives input-->
-			</form><br>
+			</form>
+			Press submit to add to your list <br><br>
+			<button onclick="add_names()">Submit</button> <br><br>           <!--submit data-->
 		<div id="loaded_data"></div><br> <!--location and style of lists-->
-				<button onclick="add_names()">Submit</button>            <!--submit data-->
+				
 		</p>
 		<p>
-		<button onclick="pick()">Cold Call</button>           <!--cold call picks a random name-->
+			Press Cold Call to choose a random student<br><br>
+			<button onclick="pick()">Cold Call</button>           <!--cold call picks a random name-->
 		</p>
 		<p id="call">
 		</p>           <!--displays cold called name-->
-		
+
 		<p>
-		<button onclick="deleteFromList()"> Delete Last Name From List</button>
+			Press Delete to remove the last name on the list <br><br>
+			<button onclick="deleteFromList()"> Delete</button>
 		</p>
 		<!-- entry boxes
 		<form>
