--- a/coldcallerpage.html
+++ b/coldcallerpage.html
@@ -12,25 +12,25 @@
 		Cold Caller
 		</h1> <!--head-->
 		
+		<p>
+		To add a name to your class list, press add.
+		To pick a random name, press cold call.
+		To delete the last item from the list, press delete.
+		</p>
 		
 		<p>
-			<form id="form1">
-				Type your student's name: <input type="text" name = "user's name"/>                  <!--receives input-->
-			</form>
-			Press submit to add to your list <br><br>
-			<button onclick="add_names()">Submit</button> <br><br>           <!--submit data-->
-		<div id="loaded_data"></div><br> <!--location and style of lists-->
+			<div id="loaded_data"></div><br> <!--location and style of lists-->
+			
+			<button onclick="popup()"> Add Name</button>   <!--adds name to list-->
 				
 		</p>
 		<p>
-			Press Cold Call to choose a random student<br><br>
 			<button onclick="pick()">Cold Call</button>           <!--cold call picks a random name-->
 		</p>
 		<p id="call">
 		</p>           <!--displays cold called name-->
 
 		<p>
-			Press Delete to remove the last name on the list <br><br>
 			<button onclick="deleteFromList()"> Delete</button>
 		</p>
 		<!-- entry boxes
