group generator files

--- a/kokua-web/groupgenerator3.html
+++ b/kokua-web/groupgenerator3.html
@@ -50,5 +50,10 @@
     x.classList.toggle("change");
 }	
 </script>
+<form id="form1">
+	Type your student's name: <input type="text" name = "user's name"/>                  <!--receives input-->
+</form>
+<button onclick="add_names()">Submit</button>
+<div id= 'loaded_data'></div>	
 	</body>
 </html>
