working cold caller web page

--- a/coldcallerpage.html
+++ b/coldcallerpage.html
@@ -16,6 +16,7 @@
 		To add a name to your class list, press add.
 		To pick a random name, press cold call.
 		To delete the last item from the list, press delete.
+		To delete the last name you called, press uncalled.
 		</p>
 		
 		<p>
@@ -33,6 +34,10 @@
 		<p>
 			<button onclick="deleteFromList()"> Delete</button>
 		</p>
+		<p>
+			<button onclick="uncalled()"> Uncalled</button>
+		</p>
+		
 		<!-- entry boxes
 		<form>
 		First name:<br>
