--- a/kokua-web/aboutus.html
+++ b/kokua-web/aboutus.html
@@ -53,7 +53,7 @@ body {font-family: Verdana,sans-serif;}
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
+/* Number text (1/4 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -99,34 +99,42 @@ body {font-family: Verdana,sans-serif;}
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+       
+      
 </style>
 <body>
-
+<center>
 
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
-  <div class="text">Caption Text</div>
+  <div class="numbertext">1 / 4</div>
+  <img src="4.jpg" style="width:75%">
+  <div class="text">Girls Who Code</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="img_fjords_wide.jpg" style="width:100%">
-  <div class="text">Caption Two</div>
+  <div class="numbertext">2 / 4</div>
+  <img src="3.jpg" style="width:75%">
+  <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
-  <div class="text">Caption Three</div>
+  <div class="numbertext">3 / 4</div>
+  <img src="2.jpg" style="width:75%">
+  <div class="text"></div>
+</div>
+<div class="mySlides fade">
+  <div class="numbertext">3 / 4</div>
+  <img src="1.jpg" style="width:75%">
+  <div class="text"></div>
 </div>
 
 </div>
 <br>
 
 <div style="text-align:center">
+  <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
@@ -153,11 +161,13 @@ function showSlides() {
     setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
 </script>
-
+</center>
 </body>
 
-		
+	<center>	
 		<p> Our names are Christina, Zoe, Cindy, Jessica and Anna, we are from the Girls Who Code Summer Immersion Program 2016</p>
+		<h3> Kokua translates from a Hawaiian word for mutual assistance or pitching in, also may be used to describe  general assistance/help (Dictionary).</h3>
+		<p> This educational website provides educators with cold callers that randomly call a students name and a group generator to randomly sort a group together all-in-one, providing group collaborations and contributions.</p></center>
 </ul>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>
@@ -208,8 +218,8 @@ head {
 }
 
 button.accordion {
-    background-color: white;
-    color: black;
+    background-color: rgba(0,0,0,0.2);
+    color: white;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -221,7 +231,7 @@ button.accordion {
 }
 
 button.accordion.active, button.accordion:hover {
-    background-color: D1D1D1;
+    background-color: rgba(0,0,0,0.3);
 }
 
 button.accordion:after {
@@ -258,27 +268,27 @@ div.panel.show {
 
 <button class="accordion">Christina</button>
 <div class="panel">
-  <p>Christina</p>
+  <p>Christina Berger is a rising senior from Lexington, Massachusetts and currently attends Lexington High School. She contributed to the front end of the final project using skills in HTML, Javascript, and CSS. Growing up in a family programmers, Christina has been geared towards STEM and the arts from the beginning of High School. When she is not coding, you can find her running cross-country, spending time in her school's art wing, or journaling. Girls Who Code has provided Christina mentors, resources, and opportunities in Computer Science that will help her in the future.</p>
 </div>
 
 <button class="accordion">Jessica</button>
 <div class="panel">
-  <p>Jessica</p>
+  <p>Jessica Carvalho is a rising junior from Everett, Massachusetts and currently attends Everett High School. She is responsible for the front-end components of the website using HTML, Javascript, and CSS. Since freshman year of high school, she decided Computer Science was the perfect major for her, combining her math skills and interests in art and design. Girls Who Code was the culmination of these two areas. In just seven weeks, Girls Who Code has given her the skills and resources to pursue Computer Science.</p>
 </div>
 
 <button class="accordion">Zoe</button>
 <div id="foo" class="panel">
-  <p>Zoe</p>
+  <p>Zoe Weiss is a rising senior from Newton, Massachusetts and currently attends Gann Academy.  Zoe is responsible for the back-end part components of the website, specifically the cold caller functions, using mostly JavaScript and some HTML/CSS.  Since Zoe first started programming on her calculator freshman year, she knew that she wanted to pursue a career in computer science.  Zoe is excited to keep learning about computer science and anticpates taking her new skills from Girls Who Code back to her high school and beyond.  </p>
 </div>
 
 <button class="accordion">Cindy</button>
 <div id="foo" class="panel">
-  <p>Cindy</p>
+  <p>Cindy Zhang is a rising senior from Belmont, Massachusetts and current attends Belmont High School (go Marauders!).  She collaborated with Zoe on the back-end components of the website for the cold caller, which is written in HTML and Javascript. She is also responsible for the login functionality of the website which allows users to save class lists and generate graphs on cold calling and group formations.  Throughout high school, she has focused on STEM subjects and was first exposed to programming in junior year.  Thanks to the Girls Who Code Summer Immersion program, she has gained experience in a variety of coding languages such as Python, C++, HTML, CSS, and Javascript.  Cindy plans on pursuing Computer Science in college, her dream school being MIT.</p>
 </div>
 
 <button class="accordion">Anna</button>
 <div id="foo" class="panel">
-  <p>Anna</p>
+  <p>Anna Cuddeback is a rising junior in high school from Medford, Massachusetts. Being homeschooled, she takes dual-enrollment classes at Middlesex Community College, and hopes to study Psychology and Computer Science in college. Anna began programming in January of her sophomore year, and is responsible for the group generator function of the website, written primarily in JavaScript.</p>
 </div>
 
 
@@ -294,7 +304,11 @@ for (i = 0; i < acc.length; i++) {
 }
 </script>
 
+		<center><h6>
+<img src="gwcc.jpg" alt="gwc" style="width:350px;height:100px;">
+</h6></center>
+
 </body>
-	
+	<p><center><a href="https://icons8.com">Icon pack by Icons8</a></center></p>
 	
 </html>
