--- a/coldcallerpage.html
+++ b/coldcallerpage.html
@@ -5,7 +5,7 @@
 		Cold Caller
 		</title> <!--tab name-->
 		
-		<script src="coldcallerfunctions.js" type="text/javascript"></script> <!--embeds the Js file-->
+		<script src="WORK!.js" type="text/javascript"></script> <!--embeds the Js file-->
 	</head>
 	<body>
 		<h1>
