--- a/kokua/home.html
+++ b/kokua/home.html
@@ -40,7 +40,7 @@
 		
 		
 		<center><h2> The ultimate teacher's assistant for you and your classroom!</h2>
-		<h4>Linking Eductation with Innovation</h4></center>
+		<h4>Linking Education with Innovation</h4></center>
 </ul>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>
